<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ToolbarTheme"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/This_metrics_are_in_our_village"
                android:textSize="25sp"
                android:layout_height="wrap_content">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/last_update"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_height="wrap_content">
                </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/lastupdate"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_height="wrap_content">

            </TextView>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/Temperature"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_height="wrap_content">
            </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/temp"
            android:textColor="#000"
            android:textSize="25sp"
            android:layout_height="wrap_content">

        </TextView>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/Humadity"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/humdity"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/wind_speed"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/wind"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>