<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:background="?android:attr/selectableItemBackground"

                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/mainimage"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop">

                    </ImageView>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_gravity="center|bottom"
                        android:background="@color/transparentback"
                        android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/maintext"
                        android:padding="20dp"
                        android:textColor="#FFFF"

                        android:layout_gravity="right|center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                    </FrameLayout>

                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="#Faac13"

                    android:layout_height="2dp"></LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.25"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="newsClick"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/news"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/news">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/news">

                        </TextView>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:onClick="busniessClicked"
                        android:background="?android:attr/selectableItemBackground"

                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/busniss">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/business">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.25"
                        android:background="?android:attr/selectableItemBackground"

                        android:onClick="phonesActivity"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/phones">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/phone_numbers">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.25"
                        android:background="?android:attr/selectableItemBackground"

                        android:onClick="appointmentclick"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/torim">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/appointment">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:onClick="weddingsClick"
                        android:background="?android:attr/selectableItemBackground"

                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/wedding">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/Weddings">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.25"
                        android:background="?android:attr/selectableItemBackground"

                        android:onClick="formsClick"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/tfasim">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/forms">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="?android:attr/selectableItemBackground"

                        android:layout_weight="0.25"
                        android:onClick="historyClicked"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/history">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/catfont"
                            android:text="@string/History">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.25"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="sendToUsclicked"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/sendtous">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"

                            android:textColor="@color/catfont"
                            android:text="@string/send_to_us">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="reportClicked"
                    android:layout_weight="0.25"
                    android:background="?android:attr/selectableItemBackground"

                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/report">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/report"
                        android:textColor="@color/catfont">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:onClick="measurClicked"
                    android:background="?android:attr/selectableItemBackground"

                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/heat">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/mdadem"
                        android:textColor="@color/catfont">

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:background="?android:attr/selectableItemBackground"

                    android:onClick="busClicked"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/bus">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/bus"
                        android:textColor="@color/catfont">

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:layout_weight="0.25"
                    android:orientation="vertical">


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </FrameLayout>
</LinearLayout>